# WhiteSphereEngine

./: CMakeLists.txt  CompileResources.bat  DFriendlyLinker.py  README.md  TODO.md  Test0.cpp  buildAndRunWindows.bat  opengl.md  test.txt  vulkanTest.bat
WhiteSphereEngine/source/: app.d
concept/: MiningProduction.d  Science documents and books.md  TODO TODO TODO.md  TODO2.md  ai.md  dev ai.md  engineering reallife.md  formulasThisAndThat.md  geology.md  ideas.md  my nuclear.md  opengl.md  optimisation.md  other engines and blogs.md  physics decay docs.md  physicsEngine.md  realism.md  rendering vulkan like opengl.md  rendering.md  scifiish.md  simulaors.md  simulations to integrate ask.md  to implement.md  todo long and updated.md  todo vulkan.md  todo.md  tointegrate simulation candidates.md  useful resources.md
concept/astrology/: compositions.md
concept/worldbuilding/: Mindmap-freemind.mm  astronomyWorldbuilding.md  worldbuilding.md
config/: FindOpenCL.cmake
docs/: UML-Event handling.zargo
include/PtrEngine/: Fbo.hpp  OpenClWrapper.hpp
mathematica/: BuildDecayTable.nb
opencl/: KernelTransfer.cl
shader/glsl/: Coordinate3dVertex.glsl  SimpleFragment.glsl  SimpleVertex.glsl  StampFragment.glsl
shader/prototyping/: ButtonShader.txt
src/asm/: Ddummy.asm
src/cpp/: Fbo.cpp  MathLib.cpp  OpenClWrapper.cpp  Quaternion.h  Solver4thOrder.cpp  Solver4thOrder.h  TestCollision.cpp  defines.h
src/d/: Array.d  Buffer.d  BufferCppBinding.d  DMain.d  DRuntimeStub.d  DatabaseAsteroidComposition.d  Defines.d  Demo1.d  EngineEntry.d  ErrorStack  ErrorStack.d  Exceptions.d  Fbo.d  GraphicsCoreGl.d  IDisposable.d  Sdl.d  (+19 more)
(+384 files in other folders)
